# controlCamera

./: .gitignore  README.md  main.py  plc_config.json  pyproject.toml
src/: app.py  main.py
src/controller/: PLCController.py  SharedPLC.py  VideoController.py
src/controller/util/: ProcessImage.py
src/model/: OpcuaDTO.py
src/screens/ImageConfigurations/: PaginaFuntions.py
src/screens/configurations/: PaginaFile.py
src/screens/status/: StatusWindow.py
src/screens/stream/: PaginaVideo.py
src/screens/stream/util/: ProcessImage.py
tests/: opcua_server.py  test_comunication.py  test_part.py  test_true.py
